# iam_dual_arm_control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dual_iiwaLaunchingOrder.md  package.xml
Data/: log_robot_efforts__02.txt  log_robot_efforts__03.txt  log_task_velo__02.txt  log_task_velo__03.txt
LearnedModel/model1/: throwingParam_prio.txt  throwingParam_sigma.txt
agx_dual_arm/: README.md  requirements_agx.txt
agx_dual_arm/agx_venv/: pyvenv.cfg
agx_dual_arm/config/: parameters.yaml
agx_dual_arm/script/: agx_hit_grab_toss.py  python_agx_dual_arm.py  python_agx_dual_arm_inertial.py
agx_dual_arm/urdf/: iiwa-pybullet.urdf  iiwa14.urdf  iiwa14_test.urdf  iiwa7.urdf
bwc_cvxgen/: bwc_description.cvxgen  bwc_solver.c  bwc_solver.h  bwc_testsolver.c
cmake/: CMakeLists.txt  Config.cmake.in
config/: parameters.yaml  ros_topics.yaml
docker/: Dockerfile
dual_arm_control/: CMakeLists.txt  README.md
dual_arm_control/bwc_cvxgen/: bwc_ldl.c  bwc_matrix_support.c  bwc_util.c
dual_arm_control/config/: parameters.yaml
dual_arm_control/include/dual_arm_control_iam/: DataLogging.hpp  DualArmControl.hpp  DualArmControlSim.hpp  DualArmCooperativeController.hpp  DualArmFreeMotionController.hpp  ObjectToGrasp.hpp  RobotVariables.hpp  ThrowingDS.hpp  TossTaskParamEstimator.hpp  TossingTarget.hpp
dual_arm_control/include/dual_arm_control_iam/tools/: FirstOrderFilter.hpp  KalmanFilter.hpp  KalmanFilter3DVelFromPosEstimator.hpp  Keyboard.h  PdfGMR.hpp  Utils.hpp
dual_arm_control/python_binding/: CMakeLists.txt
dual_arm_control/python_binding/pythonApi/: py_dual_arm_control.cpp
dual_arm_control/src/: DualArmControl.cpp  DualArmControlSim.cpp  DualArmCooperativeController.cpp  DualArmFreeMotionController.cpp  ThrowingDS.cpp
include/: Utils.hpp  dualArmCooperativeController.h  dualArmFreeMotionController.h  dual_arm_control.h  throwingDS.h
include/dual_arm_control_iam/: DualArmControlSim.hpp  DualArmCooperativeController.hpp  RobotVariables.hpp  ThrowingDS.hpp  TossingTarget.hpp
include/dual_arm_control_iam/tools/: FirstOrderFilter.hpp  KalmanFilter3DVelFromPosEstimator.hpp  PdfGMR.hpp
include/iam_dual_arm_control/: DataLogging.hpp  DualArmControl.h  DualArmControl.hpp  DualArmCooperativeController.hpp  DualArmFreeMotionController.hpp  ObjectToGrasp.hpp  RobotVariables.hpp  ThrowingDS.h  ThrowingDS.hpp  TossTaskParamEstimator.h  TossTaskParamEstimator.hpp  TossingTarget.hpp  Utils.hpp  data_logging.hpp  dualArmControl.h  dualArmCooperativeController.h  dualArmFreeMotionController.h  dual_arm_control.h  keyboard.h  throwingDS.h  toss_task_param_estimator.h
include/iam_dual_arm_control/tools/: FirstOrderFilter.hpp  KalmanFilter.hpp  KalmanFilter3DVelFromPosEstimator.hpp  Keyboard.hpp  PdfGMR.hpp  Utils.hpp
launch/: dual_arm_box_control.launch  dual_arm_control.launch  main_sim_pt1.launch  main_sim_pt2.launch  main_sim_pt3.launch  main_sim_pt4.launch
ros_dual_arm/: CMakeLists.txt  README.md  package.xml
ros_dual_arm/LearnedModel/model1/: throwingParam_mu.txt
ros_dual_arm/config/: parameters.yaml  ros_topics.yaml
ros_dual_arm/docker/: Dockerfile  build-server.sh
ros_dual_arm/include/: DataLogging.hpp  RosDualArm.hpp  RosDualArmCommunication.hpp  keyboard_interaction.hpp
ros_dual_arm/launch/: dual_arm_control.launch
ros_dual_arm/src/: DataLogging.cpp  dual_arm_control_sim.cpp
src/: DataLogging.cpp  DualArmControl.cpp  DualArmControlSim.cpp  DualArmCooperativeController.cpp  DualArmFreeMotionController.cpp  ThrowingDS.cpp  TossTaskParamEstimator.cpp  dualArmControl.cpp  dualArmCooperativeController.cpp  dualArmFreeMotionController.cpp  dual_arm_box_control.cpp  dual_arm_box_control_node.cpp  dual_arm_control.cpp  dual_arm_control_node.cpp  dual_arm_control_sim.cpp  throwingDS.cpp  toss_task_param_estimator.cpp
