<?xml version="1.0"?>
<package format="2">
  <name>ros_dual_arm_control</name>
  <version>0.0.0</version>
  <description>Using dual_arm_control with ROS - ros_dual_arm_control package</description>

  <maintainer email="micbombile@gmail.com">Michael Bombile</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>dual_arm_control_iam</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>utils</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>dual_arm_control_iam</exec_depend>

  <export>
  </export>
</package>
